force-app/main/default/objects/Meta_Hunter_Rule_List__mdt/Meta_Hunter_Rule_List__mdt.object-meta.xml
<CustomObject>
    <label>Meta Hunter Rule List</label>
    <pluralLabel>Meta Hunter Rule Lists</pluralLabel>
</CustomObject>