force-app/main/default/objects/Meta_Hunter_Rule_List__mdt/fields/Rule_ID__c.field-meta.xml
<CustomField>
    <fullName>Rule_ID__c</fullName>
    <label>Rule ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>