force-app/main/default/objects/Meta_Hunter_Rule_List__mdt/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <label>Rule Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rule List</fullName>
                <default>true</default>
                <label>Rule List</label>
            </value>
            <value>
                <fullName>SME Rule List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>